--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "chai": "^4.2.0",
+    "dom-compare": "^0.3.2",
     "lit-html": "^0.14.0",
+    "mocha": "^5.2.0",
     "mustache": "^3.0.1"
   }
 }
