first test with jest

--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   "author": "shaman-apprentice <Torsten.Knauf@gmx.de>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "transformIgnorePatterns": []
+  },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "dom-compare": "^0.3.2",
+    "jest": "^23.6.0",
     "lit-html": "^0.14.0",
     "mustache": "^3.0.1",
     "webpack": "^4.28.2",
