prototyping with automatic performance measurement
via puppeteer

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^24.1.0",
     "lit-html": "^0.14.0",
     "mustache": "^3.0.1",
+    "puppeteer": "^1.13.0",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
   }
