--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "shaman-apprentice",
   "private": false,
   "scripts": {
-    "performance-playground": "node ./performance/run.js",
+    "performance-playground": "node ./performance/run/run.js",
     "test": "jest --config test/config/jest.config.js"
   },
   "devDependencies": {
