exclude all tests from published npm package

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "files": [
     "/src/",
-    "!/src/test/"
+    "!/**/test/"
   ],
   "author": "shaman-apprentice",
   "private": false,
